--- a/week01/styles/site-plan.css
+++ b/week01/styles/site-plan.css
@@ -36,19 +36,19 @@ section h2 {
 }
 
 #color1 {
-    background-color: #0077B6;
+    background-color: #005582;
     width: 40%;
     height: 70px;
 }
 
 #color2 {
-    background-color: #90E0EF;
+    background-color: #005c72;
     width: 40%;
     height: 70px;
 }
 
 #color3 {
-    background-color: #CAF0F8;
+    background-color: #005c8c;
     width: 40%;
     height: 70px;
 }
